@@ -1,7 +1,5 @@
 package com.flipkart.varadhi.entities;
 
-import com.flipkart.varadhi.entities.auth.ResourceType;
-
 import java.util.HashMap;
 import java.util.Map;
 
@@ -11,16 +9,7 @@ public class Hierarchies {
     public record RootHierarchy() implements ResourceHierarchy {
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.ROOT);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.ROOT)) {
-                return "/";
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Root path.".formatted(type));
-            }
+            return "/";
         }
 
         @Override
@@ -33,16 +22,7 @@ public class Hierarchies {
 
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.ORG);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.ORG)) {
-                return "/" + org;
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Org path.".formatted(type));
-            }
+            return "/" + org;
         }
 
         @Override
@@ -57,16 +37,7 @@ public class Hierarchies {
 
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.TEAM);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.TEAM)) {
-                return String.format("/%s/%s", org, team);
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Team path.".formatted(type));
-            }
+            return String.format("/%s/%s", org, team);
         }
 
         @Override
@@ -78,110 +49,68 @@ public class Hierarchies {
         }
     }
 
-    public record ProjectHierarchy(String org, String team, String project) implements ResourceHierarchy {
+    public record ProjectHierarchy(Project project) implements ResourceHierarchy {
 
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.PROJECT);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.PROJECT)) {
-                return String.format("/%s/%s/%s", org, team, project);
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Project path.".formatted(type));
-            }
+            return String.format("/%s/%s/%s", project.getOrg(), project.getTeam(), project.getName());
         }
 
         @Override
         public Map<String, String> getAttributes() {
             Map<String, String> attributes = new HashMap<>();
-            attributes.put(TAG_ORG, org);
-            attributes.put(TAG_TEAM, team);
-            attributes.put(TAG_PROJECT, project);
+            attributes.put(TAG_ORG, project.getOrg());
+            attributes.put(TAG_TEAM, project.getTeam());
+            attributes.put(TAG_PROJECT, project.getName());
             return attributes;
         }
     }
 
-    public record TopicHierarchy(String org, String team, String project, String topic) implements ResourceHierarchy {
+    public record TopicHierarchy(Project project, String topic) implements ResourceHierarchy {
 
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.TOPIC);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.TOPIC)) {
-                return String.format("/%s/%s/%s/%s", org, team, project, topic);
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Topic path.".formatted(type));
-            }
+            return String.format("/%s/%s/%s/%s", project.getOrg(), project.getTeam(), project.getName(), topic);
         }
 
         @Override
         public Map<String, String> getAttributes() {
             Map<String, String> attributes = new HashMap<>();
-            attributes.put(TAG_ORG, org);
-            attributes.put(TAG_TEAM, team);
-            attributes.put(TAG_PROJECT, project);
+            attributes.put(TAG_ORG, project.getOrg());
+            attributes.put(TAG_TEAM, project.getTeam());
+            attributes.put(TAG_PROJECT, project.getName());
             attributes.put(TAG_TOPIC, topic);
             return attributes;
         }
     }
 
-    public record SubscriptionHierarchy(String org, String team, String project, String subscription,
-                                        TopicHierarchy topicHierarchy) implements ResourceHierarchy {
+    public record SubscriptionHierarchy(Project project, String subscription) implements ResourceHierarchy {
 
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.SUBSCRIPTION);
-        }
-
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.SUBSCRIPTION)) {
-                return String.format("/%s/%s/%s/%s", org, team, project, subscription);
-            } else if (type.equals(ResourceType.TOPIC)) {
-                return topicHierarchy.getResourcePath(ResourceType.TOPIC);
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for Subscription path.".formatted(type));
-            }
+            return String.format("/%s/%s/%s/%s", project.getOrg(), project.getTeam(), project.getName(), subscription);
         }
 
         @Override
         public Map<String, String> getAttributes() {
             Map<String, String> attributes = new HashMap<>();
-            attributes.put(TAG_ORG, org);
-            attributes.put(TAG_TEAM, team);
-            attributes.put(TAG_TOPIC, topicHierarchy.topic);
-            attributes.put(TAG_PROJECT, project);
+            attributes.put(TAG_ORG, project.getOrg());
+            attributes.put(TAG_TEAM, project.getTeam());
+            attributes.put(TAG_PROJECT, project.getName());
             attributes.put(TAG_SUBSCRIPTION, subscription);
             return attributes;
         }
     }
 
-    public record IamPolicyHierarchy(String resourceType, String resourceName) implements ResourceHierarchy {
+    public record IamPolicyHierarchy(ResourceHierarchy hierarchy) implements ResourceHierarchy {
         @Override
         public String getResourcePath() {
-            return getResourcePath(ResourceType.IAM_POLICY);
-        }
-        @Override
-        public String getResourcePath(ResourceType type) {
-            if (type.equals(ResourceType.IAM_POLICY)) {
-                return String.format("/%s/%s", resourceType, resourceName);
-            } else {
-                throw new IllegalArgumentException("Invalid Resource type %s for IAM Policy path.".formatted(type));
-            }
+            return hierarchy.getResourcePath();
         }
 
         @Override
         public Map<String, String> getAttributes() {
-            Map<String, String> attributes = new HashMap<>();
-            attributes.put("resource_type", resourceType);
-            attributes.put("resource", resourceName);
-            return attributes;
+            return hierarchy.getAttributes();
         }
     }
 }
